--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "15.6.1",
     "react-dom": "15.6.1",
     "react-google-maps": "^9.4.5",
+    "react-router-dom": "^4.3.1",
     "sass-loader": "^7.1.0",
     "start": "^5.1.0",
     "style-loader": "^0.22.1",
