--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lodash": "^4.17.10",
     "node-sass": "^4.9.3",
     "prop-types": "^15.6.2",
+    "query-string": "^6.1.0",
     "react": "15.6.1",
     "react-dom": "15.6.1",
     "react-google-maps": "^9.4.5",
